# tosa-for-spirv-codegen

./: .clang-format  .gitignore  AUTHORS-clspv.license  CHANGELOG.md  CHANGELOG.md.license  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.md.license  README.md  README.md.license  SECURITY.md  build_dependencies.sh  download_dependencies.sh
docs/: Doxyfile  (+4 more)
generator/: CMakeLists.txt  main.cpp
generator/include/: GeneratorUtils.hpp  ResourceInfo.hpp  ResourceInfoVisitor.hpp
generator/src/: GeneratorUtils.cpp  ResourceInfoVisitor.cpp
generator/test/: CMakeLists.txt  GeneratorTests.cpp
parsers/: CMakeLists.txt
parsers/include/: ConstantData.hpp  IParser.hpp  TosaSerializationParser.hpp
parsers/src/: ParserUtils.hpp  TosaSerializationParser.cpp
parsers/test/: ActivationOpsTest.cpp  CMakeLists.txt  ComparisonOpsTest.cpp  DataLayoutOpsTest.cpp  DataNodeOpsTest.cpp  ElementwiseBinaryOpsTest.cpp  ElementwiseTernaryOpsTest.cpp  ElementwiseUnaryOpsTest.cpp  ImageOpsTest.cpp  ParserTests.cpp  ParserUtilsTest.cpp  ReductionOpsTest.cpp  ScatterGatherOpsTest.cpp  TensorOpsTest.cpp  TypeConversionOpsTest.cpp
src/test/: CMakeLists.txt  GraphTests.cpp  IdGeneratorTests.cpp  InstructionTests.cpp  OpTestUtils.cpp  OpTestUtils.hpp  OperandTests.cpp  TensorTests.cpp  TestUtils.cpp  TestUtils.hpp
src/test/layerTests/: AbsTests.cpp  AddTests.cpp  ArgMaxTests.cpp  ArgmaxTests.cpp  ArithmeticRightShiftTests.cpp  AvgPool2dTests.cpp  BitwiseAndTests.cpp  BitwiseNotTests.cpp  BitwiseOrTests.cpp  BitwiseXorTests.cpp  CastTests.cpp  CeilTests.cpp  ClampTests.cpp  ClzTests.cpp  ConcatTests.cpp  ConstTests.cpp  Conv2dTests.cpp  Conv3dTests.cpp  CosTests.cpp  DepthwiseConv2dTests.cpp  DimTests.cpp  EffceeTests.cpp  EqualTests.cpp  ErfTests.cpp  ExpTests.cpp  Fft2dTests.cpp  FloorTests.cpp  FullyConnectedTests.cpp  GatherTests.cpp  GreaterEqualTests.cpp  GreaterTests.cpp  IdentityTests.cpp  IntDivTests.cpp  IntdivTests.cpp  LogTests.cpp  LogicalAndTests.cpp  LogicalLeftShiftTests.cpp  LogicalNotTests.cpp  LogicalOrTests.cpp  LogicalRightShiftTests.cpp  (+33 more)
src/test/operatorTests/: AbsOperatorTest.cpp  AddOperatorTest.cpp  ArgMaxOperatorTest.cpp  ArithmeticRightShiftOperatorTest.cpp  AvgPool2dOperatorTest.cpp  BitwiseAndOperatorTest.cpp  BitwiseNotOperatorTest.cpp  BitwiseOrOperatorTest.cpp  BitwiseXorOperatorTest.cpp  CastOperatorTest.cpp  CeilOperatorTest.cpp  ClampOperatorTest.cpp  ClzOperatorTest.cpp  ConcatOperatorTest.cpp  Conv2dOperatorTest.cpp  Conv3dOperatorTest.cpp  CosOperatorTest.cpp  DepthwiseConv2dOperatorTest.cpp  EqualOperatorTest.cpp  ErfOperatorTest.cpp  ExpOperatorTest.cpp  Fft2dOperatorTest.cpp  FloorOperatorTest.cpp  GatherOperatorTest.cpp  GreaterEqualOperatorTest.cpp  GreaterOperatorTest.cpp  IntDivOperatorTest.cpp  LogOperatorTest.cpp  LogicalAndOperatorTest.cpp  LogicalLeftShiftOperatorTest.cpp  LogicalNotOperatorTest.cpp  LogicalOrOperatorTest.cpp  LogicalRightShiftOperatorTest.cpp  LogicalXorOperatorTest.cpp  MatmulOperatorTest.cpp  MaxPool2dOperatorTest.cpp  MaximumOperatorTest.cpp  MinimumOperatorTest.cpp  MulOperatorTest.cpp  NegateOperatorTest.cpp  (+26 more)
testutils/: CMakeLists.txt
testutils/include/: AssemblyUtils.hpp  ModuleComparator.hpp  OpGenerator.hpp  OpTestUtils.hpp  StringUtils.hpp  ValidationUtils.hpp
testutils/include/spirvmodels/: Add.hpp  Conv2d.hpp  Header.hpp  MaxPool.hpp  Rescale.hpp
testutils/src/: AssemblyUtils.cpp  EnumMaps.cpp  EnumMaps.hpp  ModuleComparator.cpp  OpGenerator.cpp  OpTestUtils.cpp  ValidationUtils.cpp
testutils/src/test/: AssemblyUtilsTest.cpp  CMakeLists.txt  EnumMapTest.cpp  ModuleComparisonTest.cpp  OpGeneratorTest.cpp  StringUtilsTest.cpp
tools/ModelComparisonTool/: CMakeLists.txt
tools/ModelComparisonTool/src/: AdjacencyMatrix.cpp  ProblemTree.hpp  main.cpp
tools/ModelComparisonTool/src/test/: ModuleComparisonTest.cpp  ProblemTreeTest.cpp
tools/generator/: CMakeLists.txt  main.cpp
tools/generator/test/: GeneratorTests.cpp
tools/model-comparison/: CMakeLists.txt
tools/model-comparison/include/: ModuleComparator.hpp
tools/model-comparison/src/: AdjacencyMatrix.cpp  AdjacencyMatrix.hpp  CustomInstructionRules.hpp  ModelParsers.cpp  ModelParsers.hpp  ModuleComparator.cpp  ProblemTree.cpp  ProblemTree.hpp  ReplicateCompositeAirity.hpp  main.cpp
tools/model-comparison/src/test/: ModuleComparisonTest.cpp  ProblemTreeTest.cpp
tools/parsers/: CMakeLists.txt
tools/parsers/include/: ConstantData.hpp  IParser.hpp  TosaSerializationParser.hpp
tools/parsers/src/: ParserUtils.hpp  TosaSerializationParser.cpp
tools/parsers/test/: ActivationOpsTest.cpp  ComparisonOpsTest.cpp  DataLayoutOpsTest.cpp  DataNodeOpsTest.cpp  ElementwiseBinaryOpsTest.cpp  ElementwiseTernaryOpsTest.cpp  ElementwiseUnaryOpsTest.cpp  ImageOpsTest.cpp  ParserTests.cpp  ParserUtilsTest.cpp  ReductionOpsTest.cpp  ScatterGatherOpsTest.cpp  TensorOpsTest.cpp  TypeConversionOpsTest.cpp
tools/spirv2tosa/: CMakeLists.txt
tools/spirv2tosa/include/: SpirvParser.hpp  TosaOperator.hpp  spirv2tosa.hpp
tools/spirv2tosa/src/: SpirvParser.cpp  TosaOperator.cpp  main.cpp  spirv2tosa.cpp
tools/spirv2tosa/src/test/: Spirv2tosaTest.cpp  SpirvParserTest.cpp  TosaOperatorTest.cpp
tools/spirv2tosatool/: CMakeLists.txt
tools/tosa-regen/: CMakeLists.txt
tools/tosa-regen/include/: SpirvParser.hpp  TosaOperator.hpp  TosaRegen.hpp
tools/tosa-regen/src/: SpirvParser.cpp  TosaOperator.cpp  TosaRegen.cpp  main.cpp
tools/tosa-regen/src/test/: SpirvParserTest.cpp  TosaOperatorTest.cpp  TosaRegenTest.cpp
tools/utils/: CMakeLists.txt
tools/utils/include/: AssemblyUtils.hpp  EnumMaps.hpp  OpGenerator.hpp  OpTestUtils.hpp  StringUtils.hpp  ValidationUtils.hpp
tools/utils/include/spirvmodels/: Conv2d.hpp  MaxPool.hpp  Rescale.hpp  TensorName.hpp
tools/utils/src/: AssemblyUtils.cpp  EnumMaps.cpp  OpGenerator.cpp  OpTestUtils.cpp  StringUtils.cpp  ValidationUtils.cpp
tools/utils/src/test/: AssemblyUtilsTest.cpp  EnumMapTest.cpp  OpGeneratorTest.cpp  (+1 more)
tools/vgfwriter/: CMakeLists.txt
tools/vgfwriter/include/: VgfWriter.hpp
tools/vgfwriter/src/: VgfWriter.cpp
(+108 files in other folders)
